fixed overflow for project

--- a/index.css
+++ b/index.css
@@ -177,22 +177,14 @@ hr
     width: 100vw;
     height: auto;
     margin: 0;
-    padding: 0;
+    padding: 50px 0;
     position: relative;
+    overflow: hidden;
 }
 
 #projects hr
 {
     background-color: #4E8098;
-}
-
-#projects>img
-{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: /*190px*/0;
-    z-index: -999;
 }
 
 #projects h1
@@ -217,7 +209,6 @@ hr
     height: calc(80vw * 9 / 16);*/
     width: calc((100vh - 65px) * 16 / 9);
     height: calc(100vh - 65px);
-    padding: 0;
     margin: 50px auto;
     border: 2px solid #A31621;
     box-shadow: 5px 5px 5px black;
@@ -232,18 +223,8 @@ hr
     height: 100%;
     padding: 0;
     margin: 0;
+    overflow: hidden;
 }
-/*
-#proj-info
-{
-    position: absolute;
-    bottom: 10px;
-    left: 0;
-    width: 60%;
-    color: #4E8098;
-    max-width: 100vw;
-}
-    */
 
 #proj h3
 {
